--- a/randomcolorgenerator/style.css
+++ b/randomcolorgenerator/style.css
@@ -2,7 +2,7 @@ body{
     width: 100vw;
     height: 100vh;
     margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
 }
 .button{
@@ -18,9 +18,15 @@ body{
     margin-top: -15px;
     cursor: pointer;
 }
-.name{
+.hexcode{
     position: relative;
-    font-size: 50px;
+    font-size: 30px;
+    text-align: center;
+    font-family: monospace;
+}
+.rgb{
+    position: relative;
+    font-size: 30px;
     text-align: center;
     font-family: monospace;
 }
